<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="mainActivity"
            type="com.example.weather.ui.activities.MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mn"
        tools:context=".ui.activities.MainActivity">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="160dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            app:srcCompat="@drawable/cl"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather"
            android:textColor="#FFFFFF"
            android:layout_marginTop="40dp"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <TextView
            android:id="@+id/forecasts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forecasts"
            android:textColor="#DDB130"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forecasts"
            tools:ignore="HardcodedText" />


        <Button
            android:id="@+id/get_started"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:backgroundTint="#DDB130"
            android:shadowRadius="477"
            android:text="Get Started"
            android:textColor="#362A84"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="@{()->mainActivity.getStarted()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintCircleRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.252"
            tools:ignore="HardcodedText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
