<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homeActivity"
            type="com.example.weather.ui.activities.HomeActivity" />

        <variable
            name="viewModel"
            type="com.example.weather.ui.view_models.HomeActivityViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mn"
        tools:context=".ui.activities.HomeActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/frm"
            android:visibility="@{viewModel.searchVisibility}"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tool_bar">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/se"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/search_box"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:ems="10"
                android:text="@={viewModel.searchQuery}"
                android:hint="@string/search_hint"
                android:inputType="text"
                android:textColor="#fff"
                android:textColorHint="#50FFFFFF"
                android:textSize="18sp"
                tools:ignore="Autofill" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weather_items"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toTopOf="@+id/options"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <LinearLayout
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rtp"
            android:gravity="center"
            android:visibility="@{viewModel.optionsVisibility}"
            tools:visibility="visible"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

            <LinearLayout
                android:id="@id/home"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/h"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/home"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/map"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:onClick="@{()->homeActivity.map()}"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/loc"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/map"
                    android:textColor="#FFFFFF"
                    tools:ignore="TooManyViews" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/weather"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:onClick="@{()->homeActivity.weather()}"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/se"
                    tools:ignore="ContentDescription,TooManyViews" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/weather"
                    android:textColor="#FFFFFF"
                    tools:ignore="TooManyViews" />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="@{viewModel.loadingVisibility}"
            app:layout_constraintBottom_toBottomOf="@+id/weather_items"
            app:layout_constraintEnd_toEndOf="@+id/weather_items"
            app:layout_constraintStart_toStartOf="@+id/weather_items"
            app:layout_constraintTop_toTopOf="@+id/weather_items" />

        <TextView
            android:id="@+id/no_internet"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="center"
            android:visibility="@{viewModel.noInternetVisibility}"
            android:text="No Internet Connection"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/weather_items"
            app:layout_constraintEnd_toEndOf="@+id/weather_items"
            app:layout_constraintStart_toStartOf="@+id/weather_items"
            app:layout_constraintTop_toTopOf="@+id/weather_items"
            tools:ignore="HardcodedText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


